@@ -1,10 +1,24 @@
-$NetBSD: distinfo,v 1.2 2001/04/20 13:52:21 agc Exp $
+$NetBSD: distinfo,v 1.3 2004/10/29 12:56:24 abs Exp $
 
-SHA1 (setiathome/setiathome-3.03.i386-unknown-netbsd1.3.tar) = 762b6f6a54fe8daa038dc054209118191c2842ff
-Size (setiathome/setiathome-3.03.i386-unknown-netbsd1.3.tar) = 1249280 bytes
-SHA1 (setiathome/setiathome-3.03.alpha-unknown-netbsd1.4.tar) = 79d58efb9ccc1f86580a4e7da4cee79aec45c3a6
-Size (setiathome/setiathome-3.03.alpha-unknown-netbsd1.4.tar) = 330752 bytes
-SHA1 (setiathome/setiathome-3.03.powerpc-unknown-netbsd1.4.tar) = c5c71b3ec90c9791267fe0564add318a02e7d0b9
-Size (setiathome/setiathome-3.03.powerpc-unknown-netbsd1.4.tar) = 216576 bytes
-SHA1 (setiathome/setiathome-3.03.sparc-sun-solaris2.6.tar) = a2a068ba7c4790064f030f0141c86a6047d1bd36
-Size (setiathome/setiathome-3.03.sparc-sun-solaris2.6.tar) = 239616 bytes
+SHA1 (setiathome/setiathome-3.08.alpha-unknown-openbsd3.3.tar) = 893eef6f91105fff1dbd8e2ec38879a02f138dd7
+SHA1 (setiathome/setiathome-3.08.i386-pc-solaris2.6.tar) = a47345f1e4d6313b8dfd5299125b22ffb4fa7a1d
+SHA1 (setiathome/setiathome-3.08.i386-unknown-freebsd4.0.tar) = 6f2c646d1d6a2b7923163157dba93a1868c5b958
+SHA1 (setiathome/setiathome-3.08.i386-unknown-openbsd3.3.tar) = f72b4a566944ced18043b90eef651d2129270651
+SHA1 (setiathome/setiathome-3.08.i686-pc-linux-gnu.tar) = 0b73079e14b35806fbd00c87234bb6f81eb0a10b
+SHA1 (setiathome/setiathome-3.08.macppc-unknown-openbsd3.3.tar) = 6dae05daeeef05f5cb058304aee487f4c7b0dd46
+SHA1 (setiathome/setiathome-3.08.sparc-sun-solaris2.6.tar) = a33f8acabe312bfe6511956ba9446213d34eb29f
+SHA1 (setiathome/setiathome-3.08.sparc-unknown-netbsd1.6.1.tar) = 9bc960d4dd2c698b4d59d575843cefe715105cb3
+SHA1 (setiathome/setiathome-3.08.sparc-unknown-openbsd3.3.tar) = 8fd1c18514e71359073fb80dac063c77e352ce69
+SHA1 (setiathome/setiathome-3.08.sparc64-unknown-openbsd3.3.tar) = 7ee2c7257739030abb1b9fc69478fc962d6d99e3
+SHA1 (setiathome/setiathome-3.08.x86_64-pc-linux-gnu.tar) = 196bbc2874fb7c1699035d133a2775714d4b0de3
+Size (setiathome/setiathome-3.08.alpha-unknown-openbsd3.3.tar) = 312320 bytes
+Size (setiathome/setiathome-3.08.i386-pc-solaris2.6.tar) = 191488 bytes
+Size (setiathome/setiathome-3.08.i386-unknown-freebsd4.0.tar) = 196096 bytes
+Size (setiathome/setiathome-3.08.i386-unknown-openbsd3.3.tar) = 237568 bytes
+Size (setiathome/setiathome-3.08.i686-pc-linux-gnu.tar) = 247808 bytes
+Size (setiathome/setiathome-3.08.macppc-unknown-openbsd3.3.tar) = 226816 bytes
+Size (setiathome/setiathome-3.08.sparc-sun-solaris2.6.tar) = 249344 bytes
+Size (setiathome/setiathome-3.08.sparc-unknown-netbsd1.6.1.tar) = 207872 bytes
+Size (setiathome/setiathome-3.08.sparc-unknown-openbsd3.3.tar) = 211968 bytes
+Size (setiathome/setiathome-3.08.sparc64-unknown-openbsd3.3.tar) = 265728 bytes
+Size (setiathome/setiathome-3.08.x86_64-pc-linux-gnu.tar) = 224768 bytes
